# stellar-bitts

./: .gitignore  README.md  environments.toml  eslint.config.js  index.html  junk.md  package-lock.json  package.json
contracts/lending-market/: Cargo.toml
contracts/lending-market/src/: contract.rs  error.rs  interest.rs  lib.rs  liquidation.rs  oracle.rs  reflector.rs  storage.rs  types.rs  validation.rs
contracts/mock-oracle/: Cargo.toml
contracts/mock-oracle/src/: lib.rs
contracts/mock-usdc/: Cargo.toml
contracts/mock-usdc/src/: lib.rs
src/: App.tsx  globals.css  main.tsx
src/components/: ConnectAccount.tsx  WalletButton.tsx
src/components/icons/: arrow-left.tsx  arrow-right.tsx  atom.tsx  bell.tsx  boom.tsx  brackets.tsx  chevron-left.tsx  cute-robot.tsx  dots-vertical.tsx  email.tsx  gear.tsx  layout.tsx  lock.tsx  minus.tsx  monkey.tsx  plus.tsx  proccesor.tsx
src/components/marketplace/: filters.tsx  offer-card.tsx
src/components/ui/: badge.tsx  bullet.tsx  button.tsx  calendar.tsx  card.tsx  chart.tsx  command.tsx  form.tsx  indicator-bullet.tsx  input.tsx  navigation-menu.tsx  pagination.tsx  sheet.tsx  (+9 more)
src/contracts/: fungible_allowlist_example.ts  guess_the_number.ts  lending_market.ts  mock_oracle.ts  mock_usdc.ts  native_xlm.ts  nft_enumerable_example.ts
src/hooks/: useSubscription.ts  useTokenBalances.ts
src/lib/: lending-utils.ts  v0-context.tsx
src/pages/: Borrow.tsx  Borrow.tsx.bak  CreateOffer.tsx  Dashboard.tsx  Home.tsx  Marketplace.tsx  Position.tsx  Position.tsx.bak  Positions.tsx  client-layout.tsx
src/types/: lending.ts
(+46 files in other folders)
